--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
     "license": "MIT",
     "autoload": {
         "psr-4": {
-            "Nece\\Gears\\SimpleSetting\\repository\\thinkphp\\": "src/"
+            "Nece\\Gears\\SimpleSetting\\Repository\\ThinkPHP\\": "src/"
         }
     },
     "authors": [
